Adapt: Remotely 26.2 Compatibility.